rsvg-filter: Use fabs() instead of abs() for floats

Fixes a compiler warning (-Wabsolute-value).

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://bugzilla.gnome.org/show_bug.cgi?id=791017